# projeto_piloto

./: README.md  db.sqlite3  manage.py  pyproject.toml
projetopiloto/: asgi.py  settings.py  urls.py  wsgi.py
